AppleTV: Enable hardware watchdog support
The AppleTV hardware does have a hardware watchdog.

--- a/projects/ATV/linux/linux.i386.conf
+++ b/projects/ATV/linux/linux.i386.conf
@@ -1625,7 +1625,7 @@ CONFIG_WATCHDOG_NOWAYOUT=y
 #
 # Watchdog Device Drivers
 #
-CONFIG_SOFT_WATCHDOG=y
+# CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_ACQUIRE_WDT is not set
 # CONFIG_ADVANTECH_WDT is not set
 # CONFIG_ALIM1535_WDT is not set
@@ -1640,7 +1640,8 @@ CONFIG_SOFT_WATCHDOG=y
 # CONFIG_WAFER_WDT is not set
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_IE6XX_WDT is not set
-# CONFIG_ITCO_WDT is not set
+CONFIG_ITCO_WDT=y
+CONFIG_ITCO_VENDOR_SUPPORT=y
 # CONFIG_IT8712F_WDT is not set
 # CONFIG_IT87_WDT is not set
 # CONFIG_HP_WATCHDOG is not set
